🧑‍🏫 JS-week2: Listings exercise example

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </select>
 
   <strong>Garden: </strong>
-  <select id="filterGarden">
+  <select id="filterHasGarden">
     <option value=""></option>
     <option value="true">Yes</option>
     <option value="false">No</option>
